[gd_scene load_steps=16 format=2]

[ext_resource path="res://NPC/NPC1.gd" type="Script" id=1]
[ext_resource path="res://NPC/Enteties/clothes/suit_jump.png" type="Texture" id=2]
[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://NPC/Enteties/char1_jump.png" type="Texture" id=4]
[ext_resource path="res://NPC/Enteties/hair/gentleman_jump.png" type="Texture" id=5]
[ext_resource path="res://NPC/Enteties/acc/hat_cowboy_jump.png" type="Texture" id=6]
[ext_resource path="res://UI/Buttons Pack/KEYBOARD/KEYS/E.png" type="Texture" id=7]
[ext_resource path="res://Components/sprite/shadow1.png" type="Texture" id=8]
[ext_resource path="res://NPC/Enteties/clothes/pants_suit_jump.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=6]
radius = 26.0768

[sub_resource type="GDScript" id=9]
script/source = "extends Sprite


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="Animation" id=11]
resource_name = "Button"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("E:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -9 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Root/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Root/Clothes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Root/Hair:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Root/Acc:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("E:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Root/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Root/Clothes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 115, 116 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Root/Hair:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 140, 141 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Root/Acc:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3.5, 5 )

[node name="NPC1" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, 9 )
shape = SubResource( 6 )

[node name="DialogicControl" parent="." instance=ExtResource( 3 )]
visible = false
timeline = "timeline-1745233980.json"

[node name="Root" type="Sprite" parent="."]
scale = Vector2( 1, 0.9 )
script = SubResource( 9 )

[node name="Shadow" type="Sprite" parent="Root"]
self_modulate = Color( 1, 1, 1, 0.34902 )
position = Vector2( 0, 11.1111 )
texture = ExtResource( 8 )

[node name="Body" type="Sprite" parent="Root"]
texture = ExtResource( 4 )
hframes = 5
vframes = 4
frame = 10

[node name="Clothes" type="Sprite" parent="Root"]
texture = ExtResource( 2 )
hframes = 50
vframes = 4
frame = 115

[node name="Acc" type="Sprite" parent="Root"]
texture = ExtResource( 6 )
hframes = 5
vframes = 4
frame = 10

[node name="Hair" type="Sprite" parent="Root"]
visible = false
texture = ExtResource( 5 )
hframes = 70
vframes = 4
frame = 140

[node name="Clothes2" type="Sprite" parent="Root"]
texture = ExtResource( 9 )
hframes = 50
vframes = 4
frame = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Button"
anims/Button = SubResource( 11 )
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 9 )
shape = SubResource( 10 )

[node name="E" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
